# Veldanava

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TEMP_RELEASE_INSTRUCTIONS.md  TODO.md  install.sh  velandavac.cpp  velrun
.kilo/: agent-manager.json
.kilo/commands/: ai-dev-prompt.md  git-push.md
.kilo/plans/: keywords-permission-system.md  permission-system.md
Veldanava/compiler/: CMakeLists.txt
Veldanava/compiler/public/: bridge.cpp  bridge.h  vm_api.h  vm_instruction.h
Veldanava/compiler/src/: main.cpp
Veldanava/compiler/src/backend/codegen/: codegen.cpp  codegen.h
Veldanava/compiler/src/backend/vm/: instruction.h  vm.cpp  vm.h
Veldanava/compiler/src/frontend/ast/: ast.h
Veldanava/compiler/src/frontend/lexer/: keyword_table.h  lexer.cpp  lexer.h  token.h
Veldanava/compiler/src/frontend/module/: module_loader.cpp  module_loader.h
Veldanava/compiler/src/frontend/parser/: parser.cpp  parser.h
Veldanava/compiler/src/middle/ownership/: ownership.cpp  ownership.h
Veldanava/compiler/src/middle/typechecker/: typechecker.cpp  typechecker.h
Veldanava/hybrid/: CMakeLists.txt
Veldanava/hybrid/src/: main.cpp
Veldanava/hybrid/src/backend/hybrid_opt/: hybrid_opt.cpp  hybrid_opt.h
Veldora/: .gitignore  CMakeLists.txt
Veldora/src/: main.cpp
Veldora/src/backend/bridge/: bridge.cpp  bridge.h
Veldora/src/backend/hybrid/: hybrid.cpp  hybrid.h
Veldora/src/backend/interpreter/: interpreter.cpp  interpreter.h
Veldora/src/frontend/ast/: ast.h
Veldora/src/frontend/lexer/: lexer.cpp  lexer.h
Veldora/src/frontend/parser/: parser.cpp  parser.h
Velgrynd/: .gitignore  CMakeLists.txt
Velgrynd/src/: main.cpp
Velgrynd/src/backend/jit/: jit.cpp  jit.h
Velgrynd/src/frontend/ast/: ast.h
Velgrynd/src/frontend/lexer/: lexer.h
Velgrynd/src/frontend/parser/: parser.cpp  parser.h
Velzard/: .gitignore  CMakeLists.txt
Velzard/src/: main.cpp
Velzard/src/backend/interpreter/: interpreter.cpp  interpreter.h
Velzard/src/frontend/ast/: ast.h
Velzard/src/frontend/lexer/: lexer.cpp
docs/: LANGUAGE_RULES.md  QUICKSTART.md
modules/: math.veldanava
src/: main.cpp
src/backend/codegen/: codegen.cpp  codegen.h
src/backend/vm/: instruction.h  vm.cpp  vm.h
src/frontend/ast/: ast.h
src/frontend/lexer/: keyword_table.h  lexer.cpp  token.h
src/frontend/module/: module_loader.cpp  module_loader.h
src/frontend/parser/: parser.cpp  parser.h
src/middle/ownership/: ownership.cpp  ownership.h
src/middle/typechecker/: typechecker.cpp  typechecker.h
tests/: debug_loop.veldanava  hello.veldanava  printf.veldanava  printtest.veldanava  printvar.veldanava  test01.veldanava  test_all_types.veldanava  test_bool_string_loops.veldanava  test_for_print.veldanava  test_func_without_genesis.veldanava  test_genesis.veldanava  test_genesis_full.veldanava  test_if_while_parentheses_disallowed.veldanava  test_incorporate.veldanava  test_logical_keywords.veldanava  test_nested_quotes.veldanava  test_new_syntax.veldanava  test_no_permission.veldanava  test_runner.py  test_sanction.veldanava  test_sanction_flat_cross_shape.veldanava  test_sanction_func_oop.veldanava  test_sanction_func_oop_real_example.veldanava  test_sanction_func_oop_valid_genesis_scope.veldanava  test_simple_genesis.veldanava  test_simple_loop.veldanava  test_string_while.veldanava  test_veldora_lang.veldora  test_while_loop.veldanava
tests/negative/: dup_sanction.veldanava  missing_genesis_top.veldanava  missing_primordial.veldanava  no_incorp_sqrt.veldanava  no_sanction_func.veldanava  no_sanction_plus.veldanava  parens_disallowed.veldanava  test_ref_mutation.veldanava
tests/positive/: debug_loop.veldanava  hello.veldanava  printf.veldanava  printtest.veldanava  printvar.veldanava  test01.veldanava  test_all_types.veldanava  test_bool_string_loops.veldanava  test_class_struct_backend.veldanava  test_elif_chain.veldanava  test_elif_else.veldanava  test_for_print.veldanava  test_func_without_genesis.veldanava  test_genesis.veldanava  test_genesis_full.veldanava  test_if_while_parentheses_disallowed.veldanava  test_incorporate.veldanava  test_logical_keywords.veldanava  test_nested_quotes.veldanava  test_new_syntax.veldanava  test_no_permission.veldanava  test_pointer_reference.veldanava  test_print.veldanava  test_sanction.veldanava  test_sanction_flat_cross_shape.veldanava  test_sanction_func_oop.veldanava  test_sanction_func_oop_real_example.veldanava  test_sanction_func_oop_valid.veldanava  test_sanction_func_oop_valid_genesis_scope.veldanava  test_simple_loop.veldanava  test_string_while.veldanava  test_while_loop.veldanava
